--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,10 @@ code {
     text-align: center;
   }
 }
+@media screen and (max-width: 768px){
+  .toast-message{
+    left: -171%;
+    margin-top: 350px;
+    text-align: right;
+  }
+}
