--- a/src/index.css
+++ b/src/index.css
@@ -40,16 +40,11 @@ code {
 }
 @media screen and (max-width: 820px){
   .toast-message{
-    left: -179%;
-    margin-top: 415px;
-    height: 331px;
+    width: 100%;
+    height: 100vh;
     text-align: center;
-  }
-}
-@media screen and (max-width: 768px){
-  .toast-message{
-    left: -171%;
-    margin-top: 350px;
-    text-align: right;
+    left: 0%;
+    transform: rotate(0deg);
+    margin-top: 0px;
   }
 }
