--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,11 @@ code {
 .toast-message:focus{
   transform: rotate(-1.8deg);
 }
+.img{
+  background: no-repeat center/cover;
+  position: relative;
+  height: 100vh;
+}
 @media screen and (max-width: 820px){
   .toast-message{
     width: 100%;
@@ -46,5 +51,8 @@ code {
     left: 0%;
     transform: rotate(0deg);
     margin-top: 0px;
+  }
+  .img{
+    height: 120vh;
   }
 }
