--- a/src/index.css
+++ b/src/index.css
@@ -8,22 +8,15 @@ body {
   margin: 0;
   padding: 0;
 }
-
+a{
+  text-decoration: none;
+}
+ul{
+  list-style: none;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-.navbar{
-  width: 100%;
-  height: 80px;
-  background-color: white;
-  box-shadow: 1px 1px 1px 1px;
-  display: flex;
-  flex-direction: row;
-  position: fixed;
-  margin-top: -5px;
-  opacity: 1;
-  z-index: 0;
 }
 
 .toast-message {
