--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,66 @@ code {
   position: relative;
   height: 100vh;
 }
+@media screen and (max-width: 1256px) and (max-height: 777px) {
+  .img{
+    height: 120vh;
+  }
+}
+@media screen and (max-width: 1256px) and (max-height: 692px) {
+  .img{
+    height: 140vh;
+  }
+}
+@media screen and (max-width: 1256px) and (max-height: 612px) {
+  .img{
+    height: 160vh;
+  }
+}
+@media screen and (max-width: 1256px) and (max-height: 512px) {
+  .img{
+    height: 180vh;
+  }
+}
+@media screen and (max-width: 1256px) and (max-height: 447px) {
+  .img{
+    height: 200vh;
+  }
+}
+@media screen and (max-width: 1256px) and (max-height: 407px) {
+  .img{
+    height: 220vh;
+  }
+}
+@media screen and (max-width: 1256px) and (max-height: 366px) {
+  .img{
+    height: 240vh;
+  }
+}
+@media screen and (max-width: 1256px) and (max-height: 337px) {
+  .img{
+    height: 260vh;
+  }
+}
+@media screen and (max-width: 1256px) and (max-height: 311px) {
+  .img{
+    height: 280vh;
+  }
+}
+@media screen and (max-width: 1256px) and (max-height: 290px) {
+  .img{
+    height: 300vh;
+  }
+}
+@media screen and (max-width: 1256px) and (max-height: 268px) {
+  .img{
+    height: 320vh;
+  }
+}
+@media screen and (max-width: 1256px) and (max-height: 251px) {
+  .img{
+    height: 340vh;
+  }
+}
 @media screen and (max-width: 1180px) and (max-height: 820px) {
   .img{
     height: 110vh;
