--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -9,8 +9,10 @@
     min-height: 75px;
     background-color: #333;
     color: #fff;
-    z-index: 100;
+    z-index: 1000000;
+    top: 0;
 }
+
 .navbar_logo{
     font-size: 25px;
     padding-left: 15px;
