--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+.loader{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 55px;
+  height: 100vh;
+}
 .toast-message {
   font-size: 45px;
   position: absolute;
