--- a/src/utils/style/carousel.css
+++ b/src/utils/style/carousel.css
@@ -99,6 +99,9 @@
     .card_title{
         font-size: 50px;
     }
+    .arrowcontainer{
+        height: 170%;
+    }
 }
 @media screen and (max-width: 416px) {
     .card_title{
