(fix) changed size of arrow down for small devices

--- a/src/utils/style/carousel.css
+++ b/src/utils/style/carousel.css
@@ -102,6 +102,9 @@
     .arrowcontainer{
         height: 170%;
     }
+    .arrow{
+        font-size: 60px;
+    }
 }
 @media screen and (max-width: 416px) {
     .card_title{
