--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -79,6 +79,9 @@ text-decoration: underline;
         text-decoration: none;
         color: #333;
     }
+    .navbar{
+        min-height: 60px;
+    }
     .show-nav .navbar_links{
         right: -0vw;
         width: 100vw;
@@ -106,7 +109,7 @@ text-decoration: underline;
     .navbar_burger{
         display: block;
         position: fixed;
-        top: 1rem;
+        top: 0.7rem;
         right: 1rem;
     }
     .navbar_burger:hover{
