--- a/src/utils/style/carousel.css
+++ b/src/utils/style/carousel.css
@@ -86,6 +86,9 @@
     position: relative;
     animation: arrow 3s ease-out  infinite;
 }
+.arrow:hover{
+    cursor: pointer;
+}
 .arrowcontainer{
     position: absolute;
     width: 100%;
