--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -25,7 +25,7 @@
     gap: 150px;
 }
 .navbar_link:hover{
-    text-decoration: underline;
+    color: #eee;
     cursor: pointer;
 }
 .navbar_link{
@@ -40,7 +40,8 @@
     color: inherit;
 }
 .link:hover{
-text-decoration: underline;
+color: black;
+font-weight: 500;
 }
 @media screen and (max-width: 1340px){
     .navbar_links{
