--- a/src/index.css
+++ b/src/index.css
@@ -32,121 +32,12 @@ code {
 }
 .toast-message {
   font-size: 45px;
-  position: absolute;
-  margin-top: 315px;
-  left: -353%;
-  transform: rotate(-1.8deg);
-  width: 512px;
-  height: 320px;
-}
-.toast-message:focus{
-  transform: rotate(-1.8deg);
+  padding: 20px;
+  height: 400px;
 }
 .img{
   background: no-repeat center/cover;
   position: relative;
-  height: 100vh;
-}
-@media screen and (max-width: 1256px) and (max-height: 777px) {
-  .img{
-    height: 120vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 692px) {
-  .img{
-    height: 140vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 612px) {
-  .img{
-    height: 160vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 512px) {
-  .img{
-    height: 180vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 447px) {
-  .img{
-    height: 200vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 407px) {
-  .img{
-    height: 220vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 366px) {
-  .img{
-    height: 240vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 337px) {
-  .img{
-    height: 260vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 311px) {
-  .img{
-    height: 280vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 290px) {
-  .img{
-    height: 300vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 268px) {
-  .img{
-    height: 320vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 251px) {
-  .img{
-    height: 340vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 234px) {
-  .img{
-    height: 360vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 225px) {
-  .img{
-    height: 380vh;
-  }
-}
-@media screen and (max-width: 1256px) and (max-height: 212px) {
-  .img{
-    height: 420vh;
-  }
-}
-@media screen and (max-width: 1180px) and (max-height: 820px) {
-  .img{
-    height: 110vh;
-  }
-}
-@media screen and (max-width: 820px){
-  .toast-message{
-    width: 100%;
-    height: 100vh;
-    text-align: center;
-    left: 0%;
-    transform: rotate(0deg);
-    margin-top: 0px;
-  }
-  .img{
-    height: 120vh;
-  }
-}
-@media screen and (max-width: 736px) and (max-height: 414px) {
-  .img{
-    height: 190vh;
-  }
-}
-@media screen and (max-width: 667px) and (max-height: 375px) {
-  .img{
-    height: 210vh;
-  }
+  height: auto;
+  min-height: 100vh;
 }
